# hscmph

./: .travis.yml  README  cmph.cabal  stub.c
Data/: CMPH.hs
cbits/: stub.c  stub.h
test/Data/: CMPHSpec.hs
