Name:           cmph
Version:        0.0.2
Cabal-Version:  >= 1.10
License:	BSD3
License-File:   LICENSE
Build-Type:     Simple
Author:		Mark Wotton <mwotton@gmail.com>
Maintainer:	Mark Wotton <mwotton@gmail.com>
Category:	Data, Data Structures
Stability:	Experimental
extra-source-files: stub.h, README
bug-reports:	mailto:mwotton@gmail.com
Synopsis:	low level interface to CMPH
Description:    a binding to the C-based CMPH library (http://cmph.sf.net).

library
        Exposed-Modules: Data.CMPH
        default-language:    Haskell2010
        ghc-options:    -funbox-strict-fields
        c-sources: cbits/stub.c
        includes: cbits/stub.h
        ghc-prof-options: -fprof-auto
        ghc-options: -O2
        extra-libraries: cmph
        build-depends:  base >=4.5 && <5.2
                      , bytestring
                      , containers
                      , array

test-suite cmph-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Data.CMPHSpec
  build-depends:       cmph, base, hspec, QuickCheck, containers, bytestring, semigroups, text
  extra-libraries: cmph

source-repository head
  type: git
  location: http://github.com/mwotton/hscmph.git

Benchmark bench-cmph
    type:       exitcode-stdio-1.0
    main-is:        Main.hs
    hs-source-dirs: benchmark
    build-depends:  base
                  , bytestring
                  , criterion
                  , cmph
